# actix-posts

./: .gitignore  Cargo.toml  data.json
src/: handler.rs  main.rs
src/handler/: api.rs  data.rs  routes.rs
templates/: base.html  index.html  show.html
